--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/lora": "^5.2.8",
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.3",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.16"
   }
 }
